--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
-        newest server 1111
+        newest server -0sdfasdf
     </body>
 </html>
