--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
-        lateset version of cicd o
+        lateset version of cicd 1
     </body>
 </html>
