--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
-        lateset version of cicd 87023948570293847589
+        this is version 1
     </body>
 </html>
